# rust-infra

./: .env  .gitignore  Cargo.toml  README.md  cplane  cplane.nu  dbconn.rs
app/: Cargo.toml
app/src/: json_routers.rs  lib.rs  rusty.rs
data/: Cargo.toml
data_src/: Cargo.toml
datadir/: README.md
db/: auth.create.sql  auth.sample.insert.sql  cp.create.sql  cplane.create.sql  cplane.sample.insert.sql  create.sql  dbmgr  insert.sql  refresh-db  refresh-sample-db
docker/: Dockerfile.base  Dockerfile.cplane  Dockerfile.mysql  Dockerfile.ui  build  cp.image.json  cplane.yaml  start.cp  start.ui  ui.image.json  w.image.json
http/: Cargo.toml
http_srv/: Cargo.toml
http_srv/src/: filecache.rs  router.rs  state.rs
infra/: Cargo.toml
infra/src/: datasource.rs  lib.rs  router.rs  schema.rs  state.rs  table.rs
play/: play.yaml
res/css/: colors.css  dash.css  login.css  main.css  services.css  table.css  test.css
res/html/: login.html  test.html
res/js/: core.js  dash.js  services.js  table.js  test.js
res/json/: test-table-body.json  test-table-columns.json  test.json
res/pages/: cfg.toml  cust.toml  dash.html  dash.toml  db.html  db.toml  logs.toml  query.html  query.toml  serve.html  serve.toml  services.html  services.toml  test.html  test.toml
res/templates/: main.html
rust/cp_tables/: Cargo.toml
rust/cplane/: Cargo.toml  README.md
rust/cplane/src/: app.rs  cache_routers.rs  data.rs  db_log_engine.rs  json_routers.rs  lib.rs  log.rs  network.rs  objects.rs  rusty.rs  sample.rs  schema.rs  worker_reg.rs
rust/cplane/src/ro/: mod.rs  requests.rs  services.rs
rust/cplane/src/tables/: worker.rs
rust/cplane/src/tabs/: customer.rs  log.rs  mod.rs  product.rs  product_service.rs  product_tenant.rs  product_ver.rs  request.rs  schema.rs  schema_def.rs  service.rs  service_ver.rs  task.rs  tenant.rs  worker.rs
rust/cplane/tables/: Cargo.toml
rust/cplane/tables/src/: account.rs  customer.rs  lib.rs  product.rs  product_service.rs  product_tenant.rs  product_ver.rs  request.rs  service.rs  service_ver.rs  task.rs  tenant.rs  worker.rs
rust/infra/: Cargo.toml  README.md
rust/infra/src/: data_object.rs  datasource.rs  error.rs  filecache.rs  lib.rs  passthrough_router.rs  record.rs  schema.rs  sql.rs  state.rs  status_router.rs  svc_schema.rs  version.rs
rust/svr/cp-svr/: Cargo.toml
rust/svr/cp-svr/src/: dashboard_routers.rs  json_routers.rs  main.rs  services_routers.rs  state.rs
rust/svr/ui-svr/: Cargo.toml
rust/svr/ui-svr/src/: cache_routers.rs  main.rs  passthrough_router.rs  state.rs  ui_routers.rs
rust/svr/w-svr/: Cargo.toml
rust/svr/w-svr/src/: main.rs  state.rs  worker_routers.rs
src/: common.rs  dbconn.rs  dbmgr.rs  lib.rs  print_schema.rs  record.rs  schema.rs  sql.rs  timedata.rs
ui/: README.md
(+31 files in other folders)
