[package]
name = "cplane"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.8"
clap = "4.5.54"
env_logger = "0.11.8"
log = "0.4.29"
mysql = "26.0.1"
serde_json = "1.0.149"
infra = { path = "../infra" }
ui = { path = "../ui" }
serde = "1.0.228"
tokio = "1.49.0"
http = "1.4.0"
mime = "0.3.17"
