[package]
name = "cplane"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.8"
clap = "4.5.54"
tables = { version = "0.1.0", path = "tables" }
env_logger = "0.11.8"
http = "1.4.0"
infra = { path = "../infra" }
log = "0.4.29"
mime = "0.3.17"
mysql = "27.0.0"
mysql_common = "0.36.2"
rand = "0.9.2"
serde = "1.0.228"
serde_json = "1.0.149"
time = "0.3.47"
tokio = "1.49.0"
ui = { path = "../ui" }
