[package]
name = "infra"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.8"
clap = "4.5.54"
env_logger = "0.11.8"
http = "1.4.0"
log = "0.4.29"
mime = "0.3.17"
mysql = "26.0.1"
serde = "1.0.228"
serde_json = "1.0.149"
time = "0.3.47"
tokio = { version = "1.49.0", features = ["macros", "rt-multi-thread"] }
