[package]
name = "cp-svr"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.8"
cplane = { version = "0.1.0", path = "../../cplane" }
env_logger = "0.11.8"
infra = { version = "0.1.0", path = "../../infra" }
log = "0.4.29"
mime = "0.3.17"
mysql = "27.0.0"
serde = "1.0.228"
serde_json = "1.0.149"
tokio = "1.49.0"
ui = { version = "0.1.0", path = "../../ui" }
