[package]
name = "ui-svr"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.8", features = ["macros"] }
cplane = { version = "0.1.0", path = "../../cplane" }
env_logger = "0.11.8"
http = "1.4.0"
infra = { version = "0.1.0", path = "../../infra" }
log = "0.4.29"
mime = "0.3.17"
mysql = "27.0.0"
reqwest = "0.13.2"
tokio = "1.49.0"
ui = { version = "0.1.0", path = "../../ui" }
