[package]
name = "w-svr"
version = "0.1.0"
edition = "2024"

[dependencies]
log = "0.4.29"
mysql = "27.0.0"
cplane = { version = "0.1.0", path = "../../cplane" }
threadpool = "1.8.1"
tokio = "1.49.0"
env_logger = "0.11.8"
axum = "0.8.8"
reqwest = "0.13.2"
infra = { version = "0.1.0", path = "../../infra" }

